Also fixed width of main container on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     gap: 3rem;
     flex-direction: column;
-    width: 50%;
+    width: 95%;
     margin: 0 auto;
     margin-top: 3rem;
     padding: 10px;
@@ -25,7 +25,7 @@ body {
     justify-content: flex-start;
     align-items: flex-end;
     height: 60px;
-    width: 100%; /* Default width for mobile */
+    width: 95%; /* Default width for mobile */
     margin: 0 auto;
     background-color: #f6f9fc;
     color: black;
@@ -38,6 +38,9 @@ body {
 
 /* Media query for larger screens (laptops and desktops) */
 @media screen and (min-width: 768px) {
+    #main_container {
+        width: 50%;
+    }
     #nav-bar {
         width: 50%;
     }
